--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="short icon" href="#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,7 +12,10 @@
     <!-- <script src="object.js"></script> -->
     <!-- <script src="array.js"></script> -->
     <!-- <script src="array-api.js"></script> -->
-    <script src="json.js"></script>
+    <!-- <script src="json.js"></script> -->
+    <!-- <script src="async/callback.js"></script> -->
+    <!-- <script src="async/promise.js" defer></script> -->
+    <script src="async/callback-to-promise.js" defer></script>
 
 </head>
 <body>
