--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,9 @@
     <!-- <script src="json.js"></script> -->
     <!-- <script src="async/callback.js"></script> -->
     <!-- <script src="async/promise.js" defer></script> -->
-    <script src="async/callback-to-promise.js" defer></script>
-
+    <!-- <script src="async/callback-to-promise.js" defer></script> -->
+    <!-- <script src="async/async.js" defer></script> -->
+    <script src="function-basic.js"></script>
 </head>
 <body>
     
